force-app/main/default/objects/SAJ_App__c/SAJ_App__c.object-meta.xml
<CustomObject>
    <label>App</label>
    <nameField>
        <label>App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apps</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>