force-app/main/default/objects/SAJ_App__c/fields/Number_of_Licences_Requsted__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Licences_Requsted__c</fullName>
    <description>Number of Licences Requsted</description>
    <label>Number of Licences Requsted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>