force-app/main/default/objects/SAJ_App__c/fields/SAJ_All_Object_Count__c.field-meta.xml
<CustomField>
    <fullName>SAJ_All_Object_Count__c</fullName>
    <inlineHelpText>It includes all Std+ Custom Objects</inlineHelpText>
    <label>All Object Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>