force-app/main/default/objects/SAJ_App__c/fields/SAJ_Business_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Business_Outcomes__c</fullName>
    <description>Business Outcomes of the project</description>
    <label>Business Outcomes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>