force-app/main/default/objects/SAJ_App__c/fields/SAJ_Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Owner of the project</description>
    <label>Business Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Apps1</relationshipName>
    <type>Lookup</type>
</CustomField>