force-app/main/default/objects/SAJ_App__c/fields/SAJ_Business_Platform__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Business_Platform__c</fullName>
    <description>Unilever business platforms</description>
    <label>Business Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SAJ_Business_Platforms</valueSetName>
    </valueSet>
</CustomField>