force-app/main/default/objects/SAJ_App__c/fields/SAJ_Business_Value__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Business_Value__c</fullName>
    <description>Business use case description</description>
    <label>Business Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>