force-app/main/default/objects/SAJ_App__c/fields/SAJ_Customer_Community__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Customer_Community__c</fullName>
    <label>Customer Community</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>