force-app/main/default/objects/SAJ_App__c/fields/SAJ_Customer_Community_login_Demand__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Customer_Community_login_Demand__c</fullName>
    <label>Customer Community login (Demand)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>