force-app/main/default/objects/SAJ_App__c/fields/SAJ_Geographies_Impacted__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Geographies_Impacted__c</fullName>
    <description>Countries/continents for which the app is being used</description>
    <label>Geographies_Impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Asia Pacific</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>