force-app/main/default/objects/SAJ_App__c/fields/SAJ_Map_Earlier_Version_App__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Map_Earlier_Version_App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If earlier version of the same app exists, map in this field</description>
    <label>Map Earlier Version App</label>
    <referenceTo>SAJ_App__c</referenceTo>
    <relationshipLabel>Apps</relationshipLabel>
    <relationshipName>Apps</relationshipName>
    <type>Lookup</type>
</CustomField>