force-app/main/default/objects/SAJ_App__c/fields/SAJ_No_of_External_User_Usage__c.field-meta.xml
<CustomField>
    <fullName>SAJ_No_of_External_User_Usage__c</fullName>
    <description>Number of non unilever employees using the app</description>
    <label>No of External User Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>