force-app/main/default/objects/SAJ_App__c/fields/SAJ_No_of_Internal_User_Usage__c.field-meta.xml
<CustomField>
    <fullName>SAJ_No_of_Internal_User_Usage__c</fullName>
    <description>Number of unilever employees using the app</description>
    <label>No of Internal User Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>