force-app/main/default/objects/SAJ_App__c/fields/SAJ_No_of_Objects__c.field-meta.xml
<CustomField>
    <fullName>SAJ_No_of_Objects__c</fullName>
    <description>Number of custom objects used in the app</description>
    <inlineHelpText>Only Custom Objects</inlineHelpText>
    <label>No of Objects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>