force-app/main/default/objects/SAJ_App__c/fields/SAJ_No_of_Releases__c.field-meta.xml
<CustomField>
    <fullName>SAJ_No_of_Releases__c</fullName>
    <description>Total number of releases for the app</description>
    <label>No of Releases</label>
    <summaryForeignKey>SAJ_Release__c.SAJ_Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>