force-app/main/default/objects/SAJ_App__c/fields/SAJ_Partner_Community_login__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Partner_Community_login__c</fullName>
    <label>Partner Community login</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>