force-app/main/default/objects/SAJ_App__c/fields/SAJ_Platform__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Platform__c</fullName>
    <description>Technology of the app</description>
    <label>Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Mulesoft</fullName>
            </value>
            <value>
                <fullName>SharePoint</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Heroku</fullName>
            </value>
            <value>
                <fullName>Wave</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>