force-app/main/default/objects/SAJ_App__c/fields/SAJ_Project_Allowed_Prefix__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Project_Allowed_Prefix__c</fullName>
    <description>Attribute to capture all the allowed project Prefixes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Allowed Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>