force-app/main/default/objects/SAJ_App__c/fields/SAJ_Project_Dev_Prefix__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Project_Dev_Prefix__c</fullName>
    <description>Prefix used in all code components for this app</description>
    <label>Project Dev Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>