force-app/main/default/objects/SAJ_App__c/fields/SAJ_Project_Scope__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Project_Scope__c</fullName>
    <description>Detailed  scope of the project</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Scope</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>