force-app/main/default/objects/SAJ_App__c/fields/SAJ_Remedy_Managed_by_Group__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Remedy_Managed_by_Group__c</fullName>
    <description>The remedy queue name of the incident management team</description>
    <label>Remedy Managed by Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT-GL-SF Accenture L2</fullName>
            </value>
            <value>
                <fullName>Accenture : IT-GL-SF Accenture L3</fullName>
            </value>
            <value>
                <fullName>CapGemini: IT-GL-SF Cap Gemini</fullName>
            </value>
            <value>
                <fullName>Carelines: IT-GL-Carelines CapGemini</fullName>
            </value>
            <value>
                <fullName>Cognizant : IT-GL-SF Cognizant</fullName>
            </value>
            <value>
                <fullName>IT-FRONTIER-ACN-DMS Reports</fullName>
            </value>
            <value>
                <fullName>Mindtree : IT-GL-SF Mindtree</fullName>
            </value>
            <value>
                <fullName>ServOwn-GL-Consumer&amp;Market</fullName>
            </value>
            <value>
                <fullName>--Other--</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>