force-app/main/default/objects/SAJ_App__c/fields/SAJ_Salesforce_Non_Emp__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Salesforce_Non_Emp__c</fullName>
    <label>Salesforce (Non-Emp)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>