force-app/main/default/objects/SAJ_App__c/fields/SAJ_Salesforce_Platform_Demand__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Salesforce_Platform_Demand__c</fullName>
    <label>Salesforce Platform (Demand)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>