force-app/main/default/objects/SAJ_App__c/fields/SAJ_Service_Introduction_Contact__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Service_Introduction_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SI partner name</description>
    <label>Service Introduction Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Apps2</relationshipName>
    <type>Lookup</type>
</CustomField>