force-app/main/default/objects/SAJ_App__c/fields/SAJ_Service_Owner__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Service_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Responsible SI partner lead</description>
    <label>Service Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Apps</relationshipName>
    <type>Lookup</type>
</CustomField>