force-app/main/default/objects/SAJ_App__c/fields/SAJ_Solution_PM__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Solution_PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>unilever PM of the application</description>
    <label>Solution PM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Apps3</relationshipName>
    <type>Lookup</type>
</CustomField>