force-app/main/default/objects/SAJ_App__c/fields/SAJ_Sonar_Project_Key__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Sonar_Project_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SAJ Sonar Project Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>