force-app/main/default/objects/SAJ_App__c/fields/SAJ_Status__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Status__c</fullName>
    <description>current status of the app</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Project</fullName>
            </value>
            <value>
                <fullName>Proof of Concept</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Launched</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
            <value>
                <fullName>No-go / Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>