force-app/main/default/objects/SAJ_App__c/fields/SAJ_Target_Production_Org__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Target_Production_Org__c</fullName>
    <description>Attribute to capture the production org the app is intended for deployment. (Allowed values are ENT, EU, AMS SEAA)</description>
    <label>Target Production Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>AMS</fullName>
            </value>
            <value>
                <fullName>SEAA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>