force-app/main/default/objects/SAJ_App__c/fields/SAJ_Usage_Last_Refresh__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Usage_Last_Refresh__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Usage Last Refresh</label>
    <type>DateTime</type>
</CustomField>