force-app/main/default/objects/SAJ_App__c/fields/SRT_App_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>SRT_App_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Apps4</relationshipName>
    <type>Lookup</type>
</CustomField>