force-app/main/default/objects/SAJ_App__c/fields/SRT_App_Approver_3__c.field-meta.xml
<CustomField>
    <fullName>SRT_App_Approver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Apps6</relationshipName>
    <type>Lookup</type>
</CustomField>