force-app/main/default/objects/SAJ_App__c/fields/VDR_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>VDR_Additional_Comments__c</fullName>
    <inlineHelpText>Resource Related Comments</inlineHelpText>
    <label>Additional Comments</label>
    <type>TextArea</type>
</CustomField>