force-app/main/default/objects/SAJ_App__c/fields/VDR_Roles__c.field-meta.xml
<CustomField>
    <fullName>VDR_Roles__c</fullName>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Senior Architect</fullName>
            </value>
            <value>
                <fullName>Senior Developer</fullName>
            </value>
            <value>
                <fullName>Team Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>