force-app/main/default/objects/SAJ_App__c/fields/VDR_Skill_Set__c.field-meta.xml
<CustomField>
    <fullName>VDR_Skill_Set__c</fullName>
    <label>Skill Set</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lightning Development  - MUST</fullName>
            </value>
            <value>
                <fullName>Integration experience</fullName>
            </value>
            <value>
                <fullName>Sales Cloud Experience</fullName>
            </value>
            <value>
                <fullName>Service Cloud Experience</fullName>
            </value>
            <value>
                <fullName>Einstein Analytics Experience</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Visual force</fullName>
            </value>
            <value>
                <fullName>Sales force Configuration</fullName>
            </value>
            <value>
                <fullName>Workflows and Process Builders</fullName>
            </value>
            <value>
                <fullName>Approval Process</fullName>
            </value>
            <value>
                <fullName>Reporting experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>