force-app/main/default/objects/SAJ_App__c/fields/VDR_Target_Admin_and_Dev_Certs__c.field-meta.xml
<CustomField>
    <fullName>VDR_Target_Admin_and_Dev_Certs__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Target Admin and Dev Certs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>