force-app/main/default/objects/SAJ_App__c/fields/VDR_Target_Domain_Architect_Certs__c.field-meta.xml
<CustomField>
    <fullName>VDR_Target_Domain_Architect_Certs__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Target Domain Architect Certs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>