force-app/main/default/objects/SAJ_App__c/fields/VDR_Target_Proficiency_Projects_Team_Le__c.field-meta.xml
<CustomField>
    <fullName>VDR_Target_Proficiency_Projects_Team_Le__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>No.of projects Done as Team Lead</inlineHelpText>
    <label>Target Proficincy Project Team Lead</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>