force-app/main/default/objects/SAJ_App__c/fields/VDR_Target_Proficiency_Salesforce_Certs__c.field-meta.xml
<CustomField>
    <fullName>VDR_Target_Proficiency_Salesforce_Certs__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Target no.of completed Salesforce Certifications</inlineHelpText>
    <label>Target Proficiency Salesforce Certs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>