force-app/main/default/objects/SAJ_App__c/fields/VDR_Target_Proficincy_Project_Team_Mem__c.field-meta.xml
<CustomField>
    <fullName>VDR_Target_Proficincy_Project_Team_Mem__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>No.of projects Done as Team Member</inlineHelpText>
    <label>Target Proficincy Project Team Member</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>