force-app/main/default/objects/SAJ_App__c/fields/VDR_Target_Salesforce_CTA__c.field-meta.xml
<CustomField>
    <fullName>VDR_Target_Salesforce_CTA__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Target Salesforce CTA</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>