force-app/main/default/objects/SAJ_App__c/fields/VDR_Target_This_Unilever_Project_Years__c.field-meta.xml
<CustomField>
    <fullName>VDR_Target_This_Unilever_Project_Years__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Target This Unilever Project Years</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>