force-app/main/default/objects/SAJ_App__c/fields/VDR_Target_Trailhead_Score__c.field-meta.xml
<CustomField>
    <fullName>VDR_Target_Trailhead_Score__c</fullName>
    <defaultValue>25000</defaultValue>
    <label>Target Trailhead Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>