force-app/main/default/objects/SAJ_App__c/fields/VDR_Target_Years_Salesforce_Experience__c.field-meta.xml
<CustomField>
    <fullName>VDR_Target_Years_Salesforce_Experience__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Target Years Salesforce Experience</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>