force-app/main/default/objects/SAJ_App__c/recordTypes/SRT_App.recordType-meta.xml
<RecordType>
    <fullName>SRT_App</fullName>
    <active>true</active>
    <label>SRT App</label>
</RecordType>