force-app/main/default/objects/SAJ_App__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>SAJ_Business_Platform__c</columns>
    <columns>SAJ_Platform__c</columns>
    <columns>SAJ_Status__c</columns>
    <columns>SAJ_Project_Dev_Prefix__c</columns>
    <columns>SAJ_Project_Scope__c</columns>
    <columns>SAJ_No_of_External_User_Usage__c</columns>
    <columns>SAJ_No_of_Internal_User_Usage__c</columns>
    <columns>SAJ_No_of_Objects__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>